--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Maanantaikappaleet",
-  "short_name": "MK",
+  "name": "Monkero",
+  "short_name": "Monkero",
   "icons": [{
     "src": "images/hello-icon-128.png",
       "sizes": "128x128",
